--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,1 +1,18 @@
 @import "reset.scss";
+
+html {
+   height: 100%;
+}
+
+body {
+   background-color: rgba(222, 184, 135, 0.616);
+   height: 100%;
+}
+
+.wrapper {
+   min-height: 100%;
+   display: flex;
+   flex-direction: column;
+   overflow: hidden;
+   // padding-bottom: 100px;
+}
