--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,3 +16,22 @@ body {
    overflow: hidden;
    // padding-bottom: 100px;
 }
+.main {
+   min-height: calc(100vh - 80px);
+}
+
+.footer {
+   width: 100%;
+   background-color: rgb(33, 158, 33);
+   min-height: 80px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: white;
+   font-size: 20px;
+}
+.footer__text {
+   display: flex;
+   gap: 15px;
+   justify-content: center;
+}
