--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -2,11 +2,17 @@
    margin-top: 80px;
    padding: 50px 0;
    text-align: center;
+   @media (max-width: 767.98px) {
+      margin-top: 60px;
+   }
 }
 .title {
    font-size: 40px;
    font-weight: 700;
    margin-bottom: 30px;
+   @media (max-width: 767.98px) {
+      font-size: 35px;
+   }
 }
 .links {
    margin-bottom: 30px;
@@ -36,6 +42,9 @@
    position: relative;
    width: 100%;
    padding-bottom: 50%;
+   @media (max-width: 767.98px) {
+      padding-bottom: 80%;
+   }
 
    iframe {
       position: absolute;
