--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -7,6 +7,12 @@
    margin: 20px 0 50px 0;
    border-radius: 10px;
    align-items: center;
+   @media (max-width: 767.98px) {
+      flex-wrap: wrap;
+      row-gap: 20px;
+      margin: 20px 0 30px 0;
+      padding: 20px 30px;
+   }
 }
 
 .date {
@@ -14,6 +20,18 @@
    color: rgb(26, 167, 26);
    font-weight: 600;
    font-size: 20px;
+   @media (max-width: 991.98px) {
+      margin-top: 120px;
+   }
+   @media (max-width: 767.98px) {
+      margin-top: 110px;
+   }
+   @media (max-width: 600px) {
+      margin-left: 20px;
+   }
+   @media (max-width: 500px) {
+      margin-top: 100px;
+   }
 }
 .item {
    display: flex;
@@ -21,6 +39,21 @@
    padding: 35px 20px;
    border-radius: 15px;
    text-align: center;
+   @media (max-width: 940px) {
+      padding: 25px 10px;
+   }
+   @media (max-width: 850.98px) {
+      flex-direction: column;
+      row-gap: 15px;
+      width: 30%;
+   }
+   @media (max-width: 767.98px) {
+      // width: 100%;
+      flex-wrap: wrap;
+   }
+   @media (max-width: 500px) {
+      width: 100%;
+   }
 }
 .cc {
    font-size: 25px;
@@ -43,6 +76,9 @@
       color: white;
       transition: 0.5s all ease 0s;
    }
+   @media (max-width: 500px) {
+      width: 100%;
+   }
 }
 .button__disabled {
    display: none;
@@ -53,6 +89,9 @@
    color: red;
    font-weight: 700;
    font-size: 35px;
+   @media (max-width: 767.98px) {
+      font-size: 30px;
+   }
 }
 .loader {
    margin: 0 auto;
