--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -27,7 +27,14 @@ body {
    border-radius: 10px;
    padding: 30px 0;
    gap: 25px;
-
+   @media (max-width: 767.98px) {
+      padding: 30px 15px;
+   }
+   @media (max-width: 600px) {
+      flex-direction: column;
+      row-gap: 15px;
+      padding: 30px 15px;
+   }
    &:last-child {
       @media (max-width: 500px) {
          margin-bottom: 30px;
