--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -2,6 +2,7 @@
    margin-top: 80px;
    padding: 50px 0;
    text-align: center;
+   background-color: rgba(110, 101, 89, 0.616);
    @media (max-width: 767.98px) {
       margin-top: 60px;
    }
