--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,8 +5,10 @@ html {
 }
 
 body {
-   background-color: rgba(222, 184, 135, 0.616);
+   // background-color: rgba(222, 184, 135, 0.616);
    height: 100%;
+   background: url(../components//bg.jpg);
+   background-size: cover;
 }
 
 .wrapper {
@@ -14,6 +16,7 @@ body {
    display: flex;
    flex-direction: column;
    overflow: hidden;
+
    // padding-bottom: 100px;
 }
 .main {
