--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -7,7 +7,7 @@ html {
 body {
    // background-color: rgba(222, 184, 135, 0.616);
    height: 100%;
-   background: url(../components//bg.jpg);
+   background: url(../icons/bg.jpg);
    background-size: cover;
 }
 
