--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -20,6 +20,7 @@
    display: flex;
    flex-direction: column;
    row-gap: 25px;
+   justify-content: center;
 
    a {
       color: black;
@@ -33,7 +34,8 @@
 }
 
 .tel,
-.mail {
+.mail,
+.adress {
    img {
       width: 40px;
       height: 40px;
