--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -17,17 +17,21 @@
 
 .date {
    margin-top: 150px;
-   color: rgb(26, 167, 26);
+   color: white;
    font-weight: 700;
    font-size: 20px;
-   @media (max-width: 991.98px) {
+   background-color: rgb(15, 196, 15);
+   padding: 10px;
+   border-radius: 15px;
+   width: 70%;
+   line-height: 1.3;
+   @media (max-width: 1100px) {
       margin-top: 120px;
+      width: 100%;
    }
    @media (max-width: 767.98px) {
       margin-top: 80px;
-   }
-   @media (max-width: 600px) {
-      margin-left: 20px;
+      font-size: 16px;
    }
 }
 .item {
@@ -45,7 +49,6 @@
       width: 30%;
    }
    @media (max-width: 767.98px) {
-      // width: 100%;
       flex-wrap: wrap;
    }
    @media (max-width: 500px) {
