Adding styles to footer

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -54,6 +54,10 @@ body {
    justify-content: center;
    color: white;
    font-size: 20px;
+   margin-top: 30px;
+   @media (max-width: 500px) {
+      margin-top: 0;
+   }
 }
 .footer__text {
    display: flex;
