--- a/src/components/Info/OtherCurrency.module.scss
+++ b/src/components/Info/OtherCurrency.module.scss
@@ -1,7 +1,10 @@
 .wrapper {
    margin: 50px 0;
+   background-color: white;
+   padding: 30px;
+   border-radius: 15px;
    @media (max-width: 600px) {
-      padding: 0 20px;
+      padding: 20px 20px;
       margin: 30px 0;
    }
 }
@@ -18,9 +21,12 @@
       border: 4px solid rgb(15, 196, 15);
       transition: 0.3s all ease 0s;
    }
+   @media (max-width: 991.98px) {
+      margin-bottom: 30px;
+   }
    @media (max-width: 500px) {
       width: 100%;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
    }
 }
 .container {
