--- a/src/components/Convertor/Convertor.module.scss
+++ b/src/components/Convertor/Convertor.module.scss
@@ -4,7 +4,7 @@
    font-size: 30px;
    text-transform: uppercase;
    margin-bottom: 30px;
-   border: 1px solid #000;
+   border: 1px solid rgb(15, 196, 15);
    @media (max-width: 767.98px) {
       font-size: 25px;
       border: none;
@@ -33,14 +33,14 @@
    padding: 10px 15px;
    transition: 0.3s all ease 0s;
    &:not(:last-child) {
-      border-right: 1px solid #000;
+      border-right: 1px solid rgb(15, 196, 15);
    }
    &:hover {
       color: rgb(15, 196, 15);
       transition: 0.3s all ease 0s;
    }
    @media (max-width: 767.98px) {
-      border: 1px solid #000;
+      border: 1px solid rgb(15, 196, 15);
    }
    @media (max-width: 600px) {
       padding: 10px 35px;
